[package]
name = "carrier_log_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs", branch = "master" }
json = "0.12.4"
dotenv = "0.15.0"
chrono = "0.4.24"
