[package]
name = "carrier_log_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs", branch = "master" }
tokio = { version = "1.36.0", features = ["full"] }
json = "0.12.4"
dotenv = "0.15.0"
chrono = "0.4.34"
base64 = "0.21.7"
rustc-hex = "2.1.0"
flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }

iota-sdk = "1.1.4"
tonic = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3"
thiserror = "1.0.57"

[build-dependencies]
tonic-build = "0.11.0"